--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
 # 项目排除路径
-/backend/target/
+!/BEAN_CONFLICT_FIX.md
+!/FRONTEND_CHANGES_SUMMARY.md
+!/CIRCULAR_DEPENDENCY_FIX.md
+!/JAVA_VERSION_FIX.md
+
+!/COMPILATION_FIXES.md
+
+!/DATABASE_TYPE_MISMATCH_FIX.md
+
+!/FIELD_CONSISTENCY_FIX.md
+
+!/FIXES_SUMMARY.md
+
+!/FRONTEND_ROUTING_ISSUE_FIX.md
+!/MYSQL_CONFIGURATION_GUIDE.md
+
+!/MYSQL_CONNECTION_FIX.md
+
+!/MYSQL_VERSION_FIX.md
+
+!/QUICKSTART.md
+
+!/REPOSITORY_MISMATCH_FIX.md
+
+!/run-backend.sh
+
+!/start-backend.sh
+!/test-frontend.html
+
+!/start-frontend.sh
+
+!/.idea/
